# ax-quant-dinger

./: README.md  package-lock.json
.cursor/skills/quantdinger-agent-workflow/: SKILL.md
backend_api_python/: env.example
backend_api_python/app/routes/: __init__.py  billing.py  settings.py  strategy.py  user.py
backend_api_python/app/routes/agent_v1/: __init__.py  _helpers.py  admin.py  backtests.py  experiments.py  health.py  markets.py  quick_trade.py  strategies.py
backend_api_python/app/services/: billing_service.py  llm.py  oauth_service.py  pending_order_worker.py  strategy.py  trading_executor.py  usdt_payment_service.py
backend_api_python/app/services/agents/: tools.py
backend_api_python/app/services/grid/: engine.py  exchange_orders.py  runner.py
backend_api_python/app/utils/: agent_auth.py  db_postgres.py
backend_api_python/migrations/: init.sql
docs/: CHANGELOG.md  README_CN.md
docs/agent/: AGENT_QUICKSTART.md  AI_INTEGRATION_DESIGN.md  README.md  agent-openapi.json
mcp_server/: README.md  pyproject.toml
mcp_server/src/quantdinger_mcp/: __init__.py  server.py
quantdinger_vue/src/locales/lang/: en-US.js  zh-CN.js
quantdinger_vue/src/views/trading-assistant/: index.vue
