[project]
name = "quantdinger-mcp"
version = "0.1.0"
description = "Model Context Protocol server for QuantDinger Agent Gateway"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.2.0",
  "httpx>=0.27.0",
]

[project.scripts]
quantdinger-mcp = "quantdinger_mcp.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
